Remove equals assertions from OAuth2ServiceBindingDestinationLoaderTest